<?xml version="1.0"?>
<package format="3">
  <name>unity_slam_bringup</name>
  <version>0.0.0</version>
  <description>Unity → ROS2 SLAM bringup</description>
  <maintainer email="james@example.com">james</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

